# vite-tailwindcss-shadcn-template

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1bed2eee77a4_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: tasks.py
backend/app/celery_app/: __init__.py  config.py  scheduler.py  utils.py
backend/app/core/: config.py  database.py  logging.py  redis.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/features/tasks/: TaskForm.tsx  TaskList.tsx  api.ts
frontend/src/pages/: Home.tsx
