[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.2",
    "celery-redbeat>=2.3.2",
    "fastapi>=0.115.12",
    "flower>=2.0.1",
    "greenlet>=3.2.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
